# Tucil3_13524059

./: .gitignore  CMakeLists.txt  Makefile  README.md  pom.xml
doc/: Laporan.tex
doc/Tucil3_13524059/: main.tex
include/: Board.hpp  IO.hpp  graph.hpp  pathFinding.hpp
src/: Board.cpp  IO.cpp  graph.cpp  main.cpp  mainGUI.cpp  pathFinding.cpp
src/main/java/: module-info.java
src/main/java/tucil3/: MainApp.java
src/main/resources/styles/: app.css
test/output/: test1_solution_AStar_H1.txt  test1_solution_AStar_H2.txt  test1_solution_AStar_H3.txt  test1_solution_GBFS_H1.txt  test1_solution_GBFS_H2.txt  test1_solution_GBFS_H3.txt  test1_solution_UCS_None.txt  test2_solution.txt  test2_solution_AStar_H1.txt  test2_solution_AStar_H2.txt  test2_solution_AStar_H3.txt  test2_solution_GBFS_H1.txt  test2_solution_GBFS_H2.txt  test2_solution_GBFS_H3.txt  test2_solution_UCS_None.txt  test3_solution.txt  test3_solution_AStar_H1.txt  test3_solution_AStar_H2.txt  test3_solution_AStar_H3.txt  test3_solution_GBFS_H1.txt  test3_solution_GBFS_H2.txt  test3_solution_GBFS_H3.txt  test3_solution_UCS_None.txt  test_solution.txt
